--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ button { padding: 8px 12px; border-radius: 8px; border: none; background: #ffd40
   <p>Resmi e-posta ile iletişim: <strong>miadakcan@outlook.com.tr</strong></p>
 </section>
 
-<footer>© LebrySpola+ — Official Governance & Standards</footer>
+<footer>© 2026 LebrySpola+ — Official Governance & Standards</footer>
 
 <script>
 function showTab(tabId){
@@ -125,4 +125,5 @@ function searchSite(){
 </html>
 
 </html>
+
 
