--- a/index.html
+++ b/index.html
@@ -90,7 +90,15 @@ button { padding: 8px 12px; border-radius: 8px; border: none; background: #ffd40
   <p>Resmi e-posta ile iletişim: <strong>miadakcan@outlook.com.tr</strong></p>
 </section>
 
-<footer>© 2026 LebrySpola+ — Official Governance & Standards</footer>
+<footer>
+  © LebrySpola+ — Official Governance & Standards <br><br>
+  <a href="https://sites.google.com/view/lebryspolasartlar-giz-hiz-pol/ana-sayfa"
+     target="_blank"
+     style="color:#ffd400; text-decoration:none; font-weight:bold;">
+     Gizlilik Politikası & Hizmet Şartları
+  </a>
+</footer>
+
 
 <script>
 function showTab(tabId){
@@ -125,6 +133,4 @@ function searchSite(){
 </html>
 
 </html>
-
-
 
